--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  background-color: lightgray;
+  background-color: rgba(211, 211, 211, 0.743);
   font-family: sans-serif;
 }
 
@@ -37,7 +37,7 @@ margin-right: auto;
     }
 
     main {
-      background-color: rgb(255, 255, 255);
+      background-color: rgba(255, 255, 255, 0.688);
       margin-left: 5%;
       margin-right: 5%;
       margin-bottom: 5%;
@@ -80,5 +80,21 @@ h2 {
     padding: 10pt;
     }
 
-
+    a:link {
+      border-bottom: 3px solid;
+      animation-name: farbwechsel-h1;
+      animation-duration: 6s;
+      animation-iteration-count: infinite;
+      text-decoration: none;
+      border-radius: 0%;
+    }
   
+    div {
+      line-height: 25px;
+      font-size: 20px;
+      font-family: 'Times New Roman';
+    }
+
+.rounded-image {
+  border-radius: 10px; 
+}
