--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
   margin: 0;
-  background-color: rgba(211, 211, 211, 0.743);
+  background-color: rgb(211, 211, 211);
   font-family: sans-serif;
 }
 
@@ -29,6 +29,7 @@ margin-right: auto;
     50% {background-color: rgb(0, 241, 249);}
     100% {background-color: rgb(255, 0, 0);}
 }
+/* Diesen Farbwechsel habe ich für meinen Hintergrund verwendet, um von Hintergrund zu Blatt Papier unterscheiden zu können */
 
     body {
         animation-name: farbwechsel;
@@ -37,13 +38,13 @@ margin-right: auto;
     }
 
     main {
-      background-color: rgba(255, 255, 255, 0.688);
+      background-color: rgb(255, 255, 255);
       margin-left: 5%;
       margin-right: 5%;
       margin-bottom: 5%;
       margin-top: 5%;
     }
-
+/* hier habe ich eine Box erstellt, mit der ich wie ein Blatt Papier darstellen möchte */
     
 @keyframes farbwechsel-h1 {
       0% {color:blue; border-color: blueviolet;}
@@ -52,6 +53,7 @@ margin-right: auto;
       175% {color: brown; border-color: olive ;}
       100% {color: blue; border-color: blueviolet ;}
     }
+/* ich habe hier einen Farbwechsel erstellt, den ich für relativ vieles auf meiner Seite verwende */
 
     h1 {
       animation-name: farbwechsel-h1;
@@ -76,6 +78,7 @@ h2 {
       animation-iteration-count: infinite;
     }
     main {
+/* Ich habe dem Titel und meinen Untertiteln eine Umrandung hinzugefügt, welche auch einen Farbwechsel besitzt */
 
     padding: 10pt;
     }
@@ -88,13 +91,13 @@ h2 {
       text-decoration: none;
       border-radius: 0%;
     }
-  
+  /* Ich habe zuvor meine Links eingefügt, doch mir ist dann aufgefallen, dass diese keinen Farbwechsel mehr haben,
+  also habe ich ihnen den Farbwechsel wieder gegeben, jedoch den Links unterstrichen, sodass man als Leser checkt,
+  dass darunter ein Link ist */
+
     div {
       line-height: 25px;
       font-size: 20px;
       font-family: 'Times New Roman';
     }
-
-.rounded-image {
-  border-radius: 10px; 
-}
+/* ich hab hier den Text angepasst, da er auf mich eher langweilig wirkte */
